[package]
name = "hqm"
version = "0.1.0"
description = ""
authors = [""]
license = ""
repository = ""
default-run = "hqm"
edition = "2021"
rust-version = "1.63"

[build-dependencies]
tauri-build = { version = "=1.5.0", features = ["config-toml"] }

[dependencies]
tokio = { version = "1", features = ["full"] }
## -- Serde/Json
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with_macros = "2"
## -- Tauri & SurrealDB
tauri = { version = "=1.5.3", features = ["dialog-open", "dialog-save", "window-center", "window-close", "window-create", "window-show", "notification-all"] }
# For dev and to easy first time build experience, just have memory surrealdb for  now.
# Remove `default-feature=false, features = ...` to enable persistent storage.
surrealdb = {version = "=1.0.1", default-features=false, features = ['kv-rocksdb'] }
## -- Others
parking_lot = "0.12"
modql = "0.2.0"
# NOTE: , features = ["format"] would be nice, but it is very heavy, and sometime have compiles issues with swc_ components
ts-rs = { version = "6" }
chinese-lunisolar-calendar = "0.1.25"
chrono = "0.4.26"
lazy_static = "1.4.0"
httparse = "1"
reqwest = { version = "0.11.20", features = ["json", "multipart"] } 
urlencoding = "2.1.3"
url = "2.4.1"


[dev-dependencies]
anyhow = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
